--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
         <input type="text" placeholder="Enter city Name" spellcheck="false" />
         <button><img src="images/search.png" /></button>
       </div>
+      <div class="error">Invalid City Name Entered</div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
         <h1 class="temp">22°C</h1>
         <h2 class="city">New York</h2>
         <div class="details">
           <div class="col">
-            <img src="images/humidity.png" class="humidity" />
+            <img src="images/humidity.png" class="humidityImg" />
             <div>
               <p class="humidity">50%</p>
               <p>Humidity</p>
             </div>
           </div>
           <div class="col">
-            <img src="images/wind.png" class="wind" />
+            <img src="images/wind.png" class="windImg" />
             <div>
               <p class="wind">23 km/hr</p>
               <p>Wind Speed</p>
@@ -34,5 +35,6 @@
         </div>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
